--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="three_root"></div>
 
-        <script
+        <!-- <script
             src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"
             integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ=="
             crossorigin="anonymous"
@@ -103,7 +103,7 @@
             integrity="sha512-WoO4Ih0CDOSLYafy22wZD/mcJ7k0ESLqtQsFa6zFKnEUrbtuGU+GkLtVhgt93xa2qewG5gKEC6CWlN8OaCTSVg=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
-        ></script>
+        ></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
         <script type="module" src="./index_vl.js"></script>
     </body>
