--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
 
             .inner {
-                width: 100%;
+                padding-top: 300px;
                 height: 450vh;
                 z-index: 1;
                 background-color: rgba(50, 50, 50, 1);
@@ -38,7 +38,12 @@
                 position: absolute;
                 top: 0;
                 left: 0;
-                pointer-events: none;
+
+                touch-action: pan-x;
+            }
+
+            .inner * {
+                user-select: none;
             }
 
             .three_root {
@@ -79,32 +84,46 @@
             h4 {
                 top: 350vh;
             }
+
+            .slider {
+                height: auto;
+                /* width: 100dvw; */
+                perspective: 4000px;
+                left: 50%;
+                display: flex;
+                overflow-x: visible;
+                flex-flow: row nowrap;
+                gap: 80px;
+            }
+
+            .item-wrapper {
+                width: 350px;
+                height: 300px;
+
+                transform-style: preserve-3d;
+            }
+
+            .item-wrapper img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 20px;
+            }
         </style>
     </head>
     <body>
         <div id="root"></div>
         <div class="inner">
-            <h1>SANDBOX</h1>
+            <!-- <h1>SANDBOX</h1>
             <h2>SANDBOX</h2>
             <h3>SANDBOX</h3>
-            <h4>SANDBOX</h4>
+            <h4>SANDBOX</h4> -->
         </div>
 
         <div class="three_root"></div>
 
-        <!-- <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"
-            integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"
-            integrity="sha512-WoO4Ih0CDOSLYafy22wZD/mcJ7k0ESLqtQsFa6zFKnEUrbtuGU+GkLtVhgt93xa2qewG5gKEC6CWlN8OaCTSVg=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-        <script type="module" src="./index_vl.js"></script>
+        <!-- <script type="module" src="./index_vl.js"></script> -->
+        <script type="module" src="./vl_slider.js"></script>
     </body>
 </html>
