update glyph pos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             .inner {
                 padding-top: 300px;
+                width: 100dvw;
                 height: 450vh;
                 z-index: 1;
                 background-color: rgba(50, 50, 50, 1);
@@ -114,16 +115,16 @@
     <body>
         <div id="root"></div>
         <div class="inner">
-            <!-- <h1>SANDBOX</h1>
+            <h1>SANDBOX</h1>
             <h2>SANDBOX</h2>
             <h3>SANDBOX</h3>
-            <h4>SANDBOX</h4> -->
+            <h4>SANDBOX</h4>
         </div>
 
         <div class="three_root"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-        <!-- <script type="module" src="./index_vl.js"></script> -->
-        <script type="module" src="./vl_slider.js"></script>
+        <script type="module" src="./vl_glyphs.js"></script>
+        <!-- <script type="module" src="./vl_slider.js"></script> -->
     </body>
 </html>
