--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             .inner {
                 padding-top: 300px;
-                width: 100dvw;
+
                 height: 450vh;
                 z-index: 1;
                 background-color: rgba(50, 50, 50, 1);
@@ -62,6 +62,7 @@
                 font-family: sans-serif;
                 font-size: 4rem;
                 left: 50%;
+                perspective: 4000px;
                 transform: translate(-50%);
                 color: #fff;
                 text-align: center;
@@ -94,21 +95,36 @@
                 display: flex;
                 overflow-x: visible;
                 flex-flow: row nowrap;
-                gap: 80px;
+            }
+
+            .slider {
+                cursor: move; /* fallback if grab cursor is unsupported */
+                cursor: grab;
+                cursor: -moz-grab;
+                cursor: -webkit-grab;
+            }
+
+            /* (Optional) Apply a "closed-hand" cursor during drag operation. */
+            .slider:active {
+                cursor: grabbing;
+                cursor: -moz-grabbing;
+                cursor: -webkit-grabbing;
             }
 
             .item-wrapper {
-                width: 350px;
                 height: 300px;
 
                 transform-style: preserve-3d;
             }
 
-            .item-wrapper img {
+            .item-wrapper .image-wrapper {
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
                 border-radius: 20px;
+            }
+
+            .item-wrapper img {
+                object-fit: cover;
             }
         </style>
     </head>
@@ -124,7 +140,7 @@
         <div class="three_root"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-        <script type="module" src="./vl_glyphs.js"></script>
+        <script type="module" src="./vl_slider.js"></script>
         <!-- <script type="module" src="./vl_slider.js"></script> -->
     </body>
 </html>
