--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         top: 0;
         left: 0;
 
-        touch-action: pan-x;
         overflow: hidden;
       }
 
@@ -100,6 +99,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        touch-action: pan-x;
       }
 
       .slider-inner {
@@ -232,6 +232,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script type="module" src="./vl_slider.js"></script>
-    <!-- <script type="module" src="./vl_slider.js"></script> -->
+    <!-- <script type="module" src="./vl_glyphs.js"></script> -->
   </body>
 </html>
