--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
         }
       }
 
+      .disable {
+        pointer-events: none;
+      }
+
       /* DONT COPY FOR LIVE SITE */
       .inner {
         z-index: -1;
