--- a/index.html
+++ b/index.html
@@ -165,8 +165,16 @@
         transform: translateY(0);
       }
 
-      .item-wrapper:hover .image-wrapper {
+      /* .item-wrapper:hover .image-wrapper {
         transform: scale(1.02);
+      } */
+
+      .item-wrapper:hover .image {
+        transform: scale(1.3) !important;
+      }
+
+      .image {
+        transition: transform 2s cubic-bezier(0.23, 1, 0.32, 1);
       }
 
       .image-wrapper {
