--- a/index.html
+++ b/index.html
@@ -169,10 +169,6 @@
         transform: scale(1.02);
       } */
 
-      .item-wrapper:hover .image {
-        transform: scale(1.3) !important;
-      }
-
       .image {
         transition: transform 2s cubic-bezier(0.23, 1, 0.32, 1);
       }
@@ -205,6 +201,12 @@
 
         .person-meta {
           line-height: 1.8rem;
+        }
+      }
+
+      @media only screen and (min-width: 600px) {
+        .item-wrapper:hover .image {
+          transform: scale(1.3) !important;
         }
       }
 
