--- a/index.html
+++ b/index.html
@@ -131,16 +131,28 @@
 
         .person-meta {
           position: absolute;
-          top: 100%;
-          left: 50%;
-          transform: translate(-50%, 3rem);
+          top: 0;
+          left: 0;
+          background-color: rgba(0,0,0,0.3);
+          opacity: 0;
+          width: 100%;
+          height: 100%;
 
           text-transform: uppercase;
           font-family: sans-serif;
 
           max-width: 100%;
 
+          display: flex;
+          /* justify-content: center;
+          align-items: center; */
+
+          justify-content: flex-start;
+          align-items: flex-end;
+
           line-height: 3rem;
+
+          transition: opacity 0.8s cubic-bezier(0.23, 1, 0.32, 1);
         }
 
         .person-meta span {
@@ -149,14 +161,23 @@
         }
 
         .person-meta .person-name {
-          color: rgb(0, 0, 255);
+          color: rgb(255, 255, 255);
           font-size: 3rem;
-          margin-bottom: 2rem;
+
           font-weight: 900;
           opacity: 0;
+          top: 50%;
+          left: 50%;
           transform: translateY(100px);
           transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
           font-family: "UniNeue Black", sans-serif;
+
+          padding-left: 80px;
+          padding-bottom: 80px;
+        }
+
+        .item-wrapper:hover .person-meta {
+          opacity: 1;
         }
 
         .item-wrapper:hover .person-name,
