--- a/index.html
+++ b/index.html
@@ -7,298 +7,292 @@
     <title>Document</title>
 
     <style>
-         * {
-           box-sizing: border-box;
-         }
+      * {
+        box-sizing: border-box;
+      }
 
-         :where(:root) {
-           display: grid;
-           height: 100%;
-         }
+      :where(:root) {
+        display: grid;
+        height: 100%;
+      }
 
-         html,
-         body {
-           margin: 0;
-           padding: 0;
-         }
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
-         #root {
-           position: fixed;
-           top: 0;
-           left: 0;
-           z-index: 0;
-         }
+      #root {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 0;
+      }
 
-         .inner {
-           padding-top: 300px;
+      .inner {
+        padding-top: 300px;
 
-           height: 450vh;
-           z-index: 1;
-           background-color: rgb(100, 100, 100);
-           color: #fff;
-           position: absolute;
-           width: 100dvw;
-           top: 0;
-           left: 0;
+        height: 450vh;
+        z-index: 1;
+        background-color: rgb(100, 100, 100);
+        color: #fff;
+        position: absolute;
+        width: 100dvw;
+        top: 0;
+        left: 0;
 
-           overflow: hidden;
-         }
+        overflow: hidden;
+      }
 
-         .inner * {
-           user-select: none;
-           -webkit-touch-callout: none;
-         }
+      .inner * {
+        user-select: none;
+        -webkit-touch-callout: none;
+      }
 
-         .three_root {
-           z-index: 99;
-           pointer-events: none;
-         }
+      .three_root {
+        z-index: 99;
+        pointer-events: none;
+      }
 
-         .slider {
-           width: 100dvw;
+      .slider {
+        width: 100dvw;
 
-           position: relative;
-           flex-flow: row nowrap;
+        position: relative;
+        flex-flow: row nowrap;
 
-           perspective: 4000px;
+        perspective: 4000px;
 
-           display: flex;
-           justify-content: center;
-           align-items: center;
-           overflow-x: hidden;
-           overflow-y: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow-x: hidden;
+        overflow-y: hidden;
 
-           background-color: #00006e;
+        background-color: #00006e;
+      }
 
-         }
+      .slider-inner {
+        /* width: 60rem; */
+        width: 100%;
+        height: 100%;
+        padding: 1.75rem;
+        display: flex;
+        position: absolute;
+        left: 50%;
 
-         .slider-inner {
-           /* width: 60rem; */
-           width: 100%;
-           height: 100%;
-           padding: 1.75rem;
-           display: flex;
-           position: absolute;
-           left: 50%;
+        cursor: move;
+        cursor: grab;
+        cursor: -moz-grab;
+        cursor: -webkit-grab;
 
-           cursor: move;
-           cursor: grab;
-           cursor: -moz-grab;
-           cursor: -webkit-grab;
+        transform-style: preserve-3d;
 
-           transform-style: preserve-3d;
+        touch-action: pan-x;
+        -ms-overflow-style: none; /* Internet Explorer 10+ */
+        scrollbar-width: none; /* Firefox */
+      }
 
-           touch-action: pan-x;
-           -ms-overflow-style: none; /* Internet Explorer 10+ */
-           scrollbar-width: none; /* Firefox */
-         }
+      /* (Optional) Apply a "closed-hand" cursor during drag operation. */
+      .slider-inner:active {
+        cursor: grabbing;
+        cursor: -moz-grabbing;
+        cursor: -webkit-grabbing;
+      }
 
-         /* (Optional) Apply a "closed-hand" cursor during drag operation. */
-         .slider-inner:active {
-           cursor: grabbing;
-           cursor: -moz-grabbing;
-           cursor: -webkit-grabbing;
-         }
+      .item-wrapper {
+        position: absolute;
 
-         .item-wrapper {
-           position: absolute;
+        padding: 1.75rem;
+      }
 
-           padding: 1.75rem;
-         }
+      .item-wrapper .image-wrapper {
+        width: 100%;
 
-         .item-wrapper .image-wrapper {
-           width: 100%;
+        border-radius: 50px;
+      }
 
-           border-radius: 50px;
-         }
+      .item-wrapper .image,
+      .item-wrapper .image-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
 
-         .item-wrapper .image,
-         .item-wrapper .image-wrapper {
-           position: absolute;
-           top: 0;
-           left: 0;
-           width: 100%;
-           height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .item-wrapper .image-wrapper {
+        position: relative;
+        overflow: hidden;
+      }
 
-           background-repeat: no-repeat;
-           background-size: cover;
-         }
-         .item-wrapper .image-wrapper {
-           position: relative;
-           overflow: hidden;
-         }
+      .image-wrapper .image {
+        border-radius: 50px;
+      }
 
-         .image-wrapper .image {
-           border-radius: 50px;
-         }
+      .person-meta {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+        opacity: 0;
+        width: 100%;
+        height: 100%;
 
-         .person-meta {
-           position: absolute;
-           top: 0;
-           left: 0;
-           background-color: rgba(0,0,0,0.3);
-           opacity: 0;
-           width: 100%;
-           height: 100%;
+        text-transform: uppercase;
+        font-family: sans-serif;
 
-           text-transform: uppercase;
-           font-family: sans-serif;
+        max-width: 100%;
 
-           max-width: 100%;
-
-           display: flex;
-           /* justify-content: center;
+        display: flex;
+        /* justify-content: center;
            align-items: center; */
 
-           justify-content: flex-start;
-           align-items: flex-end;
+        justify-content: flex-start;
+        align-items: flex-end;
 
-           line-height: 3rem;
+        line-height: 3rem;
 
-           transition: opacity 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-         }
+        transition: opacity 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+      }
 
-         .person-meta span {
-           display: block;
-           word-wrap: break-word;
+      .person-meta span {
+        display: block;
+        word-wrap: break-word;
+      }
 
-         }
+      .person-meta .person-name {
+        color: rgb(255, 255, 255);
+        font-size: 5rem;
 
-         .person-meta .person-name {
-           color: rgb(255, 255, 255);
-           font-size: 5rem;
+        font-weight: 900;
+        opacity: 0;
+        top: 50%;
+        left: 50%;
+        transform: translateY(100px);
+        transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+        font-family: "UniNeue Black", sans-serif;
 
-           font-weight: 900;
-           opacity: 0;
-           top: 50%;
-           left: 50%;
-           transform: translateY(100px);
-           transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-           font-family: "UniNeue Black", sans-serif;
+        padding-left: 80px;
+        padding-bottom: 80px;
 
-           padding-left: 80px;
-           padding-bottom: 80px;
+        line-height: 5rem;
+      }
 
-           line-height: 5rem;
-         }
+      .item-wrapper:hover .person-meta {
+        opacity: 1;
+      }
 
-         .item-wrapper:hover .person-meta {
-           opacity: 1;
-         }
+      .item-wrapper:hover .person-name,
+      .item-wrapper:hover .person-function {
+        opacity: 1;
+        transform: translateY(0);
+      }
 
-         .item-wrapper:hover .person-name,
-         .item-wrapper:hover .person-function {
-           opacity: 1;
-           transform: translateY(0);
-         }
-
-         /* .item-wrapper:hover .image-wrapper {
+      /* .item-wrapper:hover .image-wrapper {
            transform: scale(1.02);
          } */
 
-         .item-wrapper:hover .image {
-           transform: scale(1.3) !important;
-         }
-
-         .image {
-           transition: transform 2s cubic-bezier(0.23, 1, 0.32, 1);
-         }
-
-         .image-wrapper {
-           transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1);
-            -webkit-backface-visibility: hidden;
-       -moz-backface-visibility: hidden;
-       -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0)
-       will-change: transform;
-         }
-
-         .person-meta .person-function {
-           opacity: 0;
-           transition: all 0.8s 0.1s cubic-bezier(0.23, 1, 0.32, 1);
-           transform: translateY(100px);
-           font-size: 2rem;
-           line-height: 1.8rem;
-           color: rgb(0, 0, 0);
-           font-family: "UniNeue Book", sans-serif;
-         }
-
-         .person-meta .person-data {
-           opacity: 0;
-           font-size: 2.4rem;
-           color: rgb(0, 0, 0);
-         }
-
-                 @media only screen and (max-width: 1400px) {
-                 	.slider {
-                   	margin-top: -50px;
-                   }
-                 }
-
-         @media only screen and (max-width: 1000px) {
-           .person-meta,
-           .person-name,
-           .person-function {
-             font-size: 2.2rem !important;
-             line-height: 1.8rem !important;
-           }
-
-           .person-name {
-      	     padding-left: 60px;
-              padding-bottom: 60px;
+      .item-wrapper:hover .image {
+        transform: scale(1.3) !important;
       }
 
-           .person-meta {
-             line-height: 1.8rem;
-           }
-         }
-
-         @media only screen and (min-width: 600px) {
-           .item-wrapper:hover .image {
-             transform: scale(1.3) !important;
-           }
-
-            .person-name {
-      	     padding-left: 40px;
-              padding-bottom: 40px;
+      .image {
+        transition: transform 2s cubic-bezier(0.23, 1, 0.32, 1);
       }
-         }
 
-         @media only screen and (max-width: 600px) {
-           .person-meta,
-           .person-name,
-           .person-function {
-             font-size: 1.4rem !important;
-           }
+      .image-wrapper {
+        transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1);
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        will-change: transform;
+      }
 
+      .person-meta .person-function {
+        opacity: 0;
+        transition: all 0.8s 0.1s cubic-bezier(0.23, 1, 0.32, 1);
+        transform: translateY(100px);
+        font-size: 2rem;
+        line-height: 1.8rem;
+        color: rgb(0, 0, 0);
+        font-family: "UniNeue Book", sans-serif;
+      }
 
+      .person-meta .person-data {
+        opacity: 0;
+        font-size: 2.4rem;
+        color: rgb(0, 0, 0);
+      }
 
-           .person-name {
-             margin-bottom: 1rem !important;
-           }
-         }
+      @media only screen and (max-width: 1400px) {
+        .slider {
+          margin-top: -50px;
+        }
+      }
 
-         @media (max-width: 767px) {
+      @media only screen and (max-width: 1000px) {
+        .person-meta,
+        .person-name,
+        .person-function {
+          font-size: 2.2rem !important;
+          line-height: 1.8rem !important;
+        }
 
+        .person-name {
+          padding-left: 60px;
+          padding-bottom: 60px;
+        }
 
-            .slider:hover .person-name,
-         .slider:hover .person-function {
-             opacity: 1;
-           transform: translateY(0);
-           }
-         }
+        .person-meta {
+          line-height: 1.8rem;
+        }
+      }
 
-         /* DONT COPY FOR LIVE SITE */
-         .inner {
-           z-index: -1;
-           text-align: center;
-         }
+      @media only screen and (min-width: 600px) {
+        .item-wrapper:hover .image {
+          transform: scale(1.3) !important;
+        }
 
-         h1,
-         h2,
-         h3 {
-           margin-bottom: 50vw;
-         }
+        .person-name {
+          padding-left: 40px;
+          padding-bottom: 40px;
+        }
+      }
+
+      @media only screen and (max-width: 600px) {
+        .person-meta,
+        .person-name,
+        .person-function {
+          font-size: 1.4rem !important;
+        }
+
+        .person-name {
+          margin-bottom: 1rem !important;
+        }
+      }
+
+      @media (max-width: 767px) {
+        .slider:hover .person-name,
+        .slider:hover .person-function {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* DONT COPY FOR LIVE SITE */
+      .inner {
+        z-index: -1;
+        text-align: center;
+      }
+
+      h1,
+      h2,
+      h3 {
+        margin-bottom: 50vw;
+      }
     </style>
   </head>
   <body>
